# libplugin

./: CMakeLists.txt  Doxyfile  README.md
exemples/: loader.cpp  mod.cpp
include/: libplugin.h
include/libplugin/: macros.h  plugin.h
man/: libplugin.Plugin.3  libplugin.macros.3
src/: plugin.cpp
